<resources>
    <string name="app_name">Hack The Code</string>
    <string name="hello_blank_fragment">Hello blank frag</string>
    <string name="prompt_decode_string">Decode This Sentence!</string>
    <string name="encoded_here">Encoded text put here at runtime</string>
    <string name="final_answer">Answer</string>
    <string name="hint">Hint</string>
    <string name="encode">Encode</string>
    <string name="encoded">Encoded</string>
    <string name="unencoded">Plain</string>
    <string name="check_answer">Check My Answer</string>
    <string name="example_sentence">example sentence</string>
    <string name="empty_string" />
    <string name="select_level">Select level</string>
    <string name="instructions">Instructions</string>
    <string name="about_app">About the App</string>
    <string name="select_level_prompt">Select a level</string>
    <string name="numeric_1">1</string>
    <string name="numeric_2">2</string>
    <string name="numeric_3">3</string>
    <string name="numeric_4">4</string>
    <string name="numeric_5">5</string>
    <string name="numeric_6">6</string>
    <string name="numeric_7">7</string>
    <string name="numeric_8">8</string>
    <string name="preferences_key">HACK_THE_CODE_PREFERENCES</string>
    <string name="maximum_level_key">LEVEL_KEY</string>
    <string name="try_again">Incorrect. Try again</string>
    <string name="level_1_encoded">E cen heck thi cudi</string>
    <string name="level_1_decoded">I can hack the code</string>
    <string name="level_1_hint">Only the vowels change in this code</string>
</resources>
